operators/portworx-certified/26.3.2/manifests/admissionregistration_v1_validatingadmissionpolicybinding_storagecluster.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: storagecluster.admission.portworx.io
spec:
  policyName: storagecluster.admission.portworx.io
  validationActions: [Deny]
